# PlaNetZoo

./: .gitignore  README.md  pyproject.toml  setup.py  train.py
src/data/: cifar10.py
src/planetzoo/: __init__.py
src/planetzoo/data/: __init__.py
src/planetzoo/layers/: __init__.py  fno_conv2d.py
src/planetzoo/layers/quantization/: __init__.py  conv2d_quantization.py  linear_quantization.py  utils.py
src/planetzoo/model/: __init__.py  conv_lstm.py  inception.py  mlp.py  simi2v.py  unet.py  unet_lstm.py  unet_parts.py  utils.py
src/planetzoo/model/cnn/: __init__.py  alexnet.py
src/planetzoo/model/neuralop/: __init__.py  fno_2d.py
src/planetzoo/model/quantization/: __init__.py  alexnet_quantization.py  mobilenet_quantization.py  resnet18_quantization.py
src/planetzoo/processor/: __init__.py  base_processor.py  normalize_processor.py
