[build-system]
requires = ["flit_core>=3.4"]
build-backend = "flit_core.buildapi"

[project]
name = "planetzoo"
version = "0.1.0"
authors = [
  { name="Ivan Canull", email="ivancanull@gmail.com" },
]
description = "A private zoo for neural networks"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/ivancanull/PlaNetZoo"
Issues = "https://github.com/ivancanull/PlaNetZoo/issues"